Fix margins on mobile version for all pages

--- a/css/brand-and-print-responsive.css
+++ b/css/brand-and-print-responsive.css
@@ -5,7 +5,7 @@
   }
 
   main {
-    margin: 15% 5% 0 5%;
+    margin: 15% 3% 0 3%;
     padding-top: 5%;
   }
 
