--- a/css/contact-responsive.css
+++ b/css/contact-responsive.css
@@ -4,7 +4,7 @@
   }
 
   main {
-    margin: 15% 5% 0 5%;
+    margin: 15% 0 0 0;
   }
 
   .contact  {
@@ -16,8 +16,8 @@
   .contact-img-box {
     position: relative;
     margin: 8% 0;
-    border-top: 2em solid white;
-    border-bottom: 2em solid white;
+    border-top: 1.2em solid white;
+    border-bottom: 1.2em solid white;
   }
 
   .contact-img {
@@ -34,16 +34,16 @@
     height: 90%;
     position: absolute;
     z-index: 2;
-    margin: 4%;
+    margin: 4% 5%;
     border: .3em solid white;
   }
 
   .contact-text-box {
-    width: 65%;
+    width: 60%;
     height: 100%;
     float: right;
     background-color: white;
-    padding: 5% 6%;
+    padding: 5% 7%;
   }
 
   .contact-title {
@@ -61,7 +61,7 @@
 
   .contact-icon-box {
     width: 100%;
-    margin: 3% 0 41% 0;
+    margin: 3% 0 29% 0;
     background-color: white;
     text-align: center;
   }
