--- a/css/menu-mobile.css
+++ b/css/menu-mobile.css
@@ -14,7 +14,7 @@
     width: 100%;
     height: 10%;
     background-color: white;
-    padding: 2% 5%;
+    padding: 2% 3%;
     position: fixed;
     z-index: 8;
   }
